# kingdom-scraper

./: .gitignore  README.md  pyproject.toml
src/kingdom_archives/: __init__.py  cli.py  client.py  config.py  crawler.py  downloader.py  parser.py  state.py  voicelines.py
